# awesome-slack-emoji

./: .gitignore  .python-version  README.md  download.py  pyproject.toml
jsons/: seeeeeed.json
tests/: test_download.py
