[tool.poetry]
name = "awesome-slack-emoji"
version = "0.1.0"
description = ""
authors = ["mei <mei28aquarius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
